Enhance layout and documentation: update wf-flex to support wrapping, add wf-container component with width and padding, and correct links in documentation

--- a/src/main.css
+++ b/src/main.css
@@ -139,7 +139,7 @@ nav {
         border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
 
         @media (width < 460px) {
-            padding: .5rem;
+            padding: 2rem .5rem;
         }
     }
 
